# libmmmagic

./: CMakeLists.txt  LICENSE  README.md  magic.txt
mmagic/: mmagic.sln
mmagic/mmagic/: mmagic.vcxproj  mmagic.vcxproj.filters
mmmagic/: asyncthreads.c  asyncthreads.h  build.sh  main.cpp  mm_lowlevel.h  mmmagic.c  mmmagic.h  update.c  update.h
mmmagic-dumpsterfire/: build.bat  create-o-files-win.bat  main.c  minimaidhid.c  minimaidhid.h  mm_lowlevel.c  mmmagic.c  mmmagic.h  platform.h
